--- a/src/main/java/br/com/digilabs/meiomask/examples/HomePage.html
+++ b/src/main/java/br/com/digilabs/meiomask/examples/HomePage.html
@@ -17,7 +17,7 @@
             <form wicket:id="form" action="#">
                 <fieldset>
                     <label>fixed Mask:</label>
-                    <input wicket:id="fixed" style="width: 200px" type="text" />
+                    <input id="fixed" style="width: 200px" type="text" />
                 </fieldset>
                 <a id="change-mask" title="change mask" href="#">change mask</a>
                 <fieldset>
@@ -30,7 +30,7 @@
                 </fieldset>
                 <fieldset>
                     <label>fixed.cpf Mask:</label>
-                    <input style="width: 200px" type="text" wicket:id="fixedCpf" />
+                    <input style="width: 200px" type="text" id="fixedCpf" />
                 </fieldset>
                 <fieldset>
                     <label>fixed.cnpj Mask:</label>
